rust/tenx-websummary-derive/tests/ui_derive_html/derive_unsupported.stderr
error: HtmlTemplate can only be derived for structs with named fields. Unsupported shape `enum`. Expected struct with named fields.
 --> tests/ui_derive_html/derive_unsupported.rs:3:10
  |
3 | #[derive(HtmlTemplate)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `HtmlTemplate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: HtmlTemplate can only be derived for structs with named fields. Unsupported shape `one unnamed field`. Expected named fields.
 --> tests/ui_derive_html/derive_unsupported.rs:8:10
  |
8 | #[derive(HtmlTemplate)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `HtmlTemplate` (in Nightly builds, run with -Z macro-backtrace for more info)
